@@ -61,6 +61,7 @@ __PACKAGE__->config('name'                   => 'Thruk',
                                                 'uri'          => \&Thruk::Utils::uri,
                                                 'uri_with'     => \&Thruk::Utils::uri_with,
                                                 'html_escape'  => \&Thruk::Utils::_html_escape,
+                                                'escape_quotes'=> \&Thruk::Utils::_escape_quotes,
                                                 'get_message'  => \&Thruk::Utils::get_message,
                                                 'throw'        => \&Thruk::Utils::throw,
                                             },
