@@ -142,11 +142,11 @@
                 <table border="0" cellpadding="0" cellspacing="0">
                   <tr>
                     [% IF s.host_acknowledged                 %]<td align="center"><a href="extinfo.cgi?type=1&amp;host=[% s.host_name %]#comments"><img src="/thruk/themes/[% theme %]/images/ack.gif" alt="This host problem has been acknowledged" title="This host problem has been acknowledged" border="0" height="20" width="20"></a></td>[% END %]
-                    [% IF host_comment_count > 0              %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/comment.gif" alt="This host has [% host_comment_count %] comment associated with it" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name %][% FOR com = comments_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(com.entry_time, '%Y-%m-%d') == today %][% date.format(com.entry_time, datetime_format_today) %][% ELSE %][% date.format(com.entry_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(com.comment)) %][% ELSE %][% html_escape(com.comment) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Comments',WIDTH,600,CLOSECLICK,HAUTO);"></td>[% END %]
+                    [% IF host_comment_count > 0              %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/comment.gif" alt="This host has [% host_comment_count %] comment associated with it" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name %][% FOR com = comments_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(com.entry_time, '%Y-%m-%d') == today %][% date.format(com.entry_time, datetime_format_today) %][% ELSE %][% date.format(com.entry_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(com.comment)) %][% ELSE %][% escape_quotes(html_escape(com.comment)) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Comments',WIDTH,600,CLOSECLICK,HAUTO);"></td>[% END %]
                     [% IF s.host_notifications_enabled == 0   %]<td align="center"><a href="extinfo.cgi?type=1&amp;host=[% s.host_name %]"><img src="/thruk/themes/[% theme %]/images/ndisabled.gif" alt="Notifications for this host have been disabled" title="Notifications for this host have been disabled" border="0" height="20" width="20"></a></td>[% END %]
                     [% IF s.host_active_checks_enabled == 0   %]<td align="center"><a href="extinfo.cgi?type=1&amp;host=[% s.host_name %]"><img src="/thruk/themes/[% theme %]/images/disabled.gif" alt="Checks of this host have been disabled" title="Checks of this host have been disabled" border="0" height="20" width="20"></a></td>[% END %]
                     [% IF s.host_is_flapping                  %]<td align="center"><a href='extinfo.cgi?type=1&amp;host=[% s.host_name %]'><img src='/thruk/themes/[% theme %]/images/flapping.gif' border="0" width="20" height="20" alt='This host is flapping between states' title='This host is flapping between states'></a></td>[% END %]
-                    [% IF s.host_scheduled_downtime_depth > 0 %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/downtime.gif" alt="This host is currently in a period of scheduled downtime" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name %][% FOR d = downtimes_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.start_time, '%Y-%m-%d') == today %][% date.format(d.start_time, datetime_format_today) %][% ELSE %][% date.format(d.start_time, datetime_format) %][% END %] until </td><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.end_time, '%Y-%m-%d') == today %][% date.format(d.end_time, datetime_format_today) %][% ELSE %][% date.format(d.end_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(d.comment)) %][% ELSE %][% html_escape(d.comment) %][% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Downtimes',CLOSECLICK,HAUTO);"></td>[% END %]
+                    [% IF s.host_scheduled_downtime_depth > 0 %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/downtime.gif" alt="This host is currently in a period of scheduled downtime" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name %][% FOR d = downtimes_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.start_time, '%Y-%m-%d') == today %][% date.format(d.start_time, datetime_format_today) %][% ELSE %][% date.format(d.start_time, datetime_format) %][% END %] until </td><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.end_time, '%Y-%m-%d') == today %][% date.format(d.end_time, datetime_format_today) %][% ELSE %][% date.format(d.end_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(d.comment)) %][% ELSE %][% escape_quotes(html_escape(d.comment)) %][% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Downtimes',CLOSECLICK,HAUTO);"></td>[% END %]
                     [% IF s.host_is_executing > 0             %]<td align="center"><a href="extinfo.cgi?type=1&amp;host=[% s.host_name %]"><img src="/thruk/themes/[% theme %]/images/waiting.gif" alt="This host is currently executing its hostcheck" title="This host is currently executing its hostcheck" border="0" height="20" width="20"></a></td>[% END %]
                     [% IF s.host_notes_url_expanded           %]<td align="center" valign="middle"><a href='[% s.host_notes_url_expanded %]'[% IF c.config.cgi_cfg.notes_url_target %] target='[% c.config.cgi_cfg.notes_url_target %]'[% END %]><img src='/thruk/themes/[% theme %]/images/notes.gif' border="0" width="20" height="20" alt='View Extra Host Notes' title='View Extra Host Notes'></a></td>[% END %]
                     [% IF s.host_action_url_expanded          %]<td align="center" valign="middle"><a href='[% s.host_action_url_expanded %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='/thruk/themes/[% theme %]/images/action.gif' border="0" width="20" height="20" alt='Perform Extra Host Actions' title='Perform Extra Host Actions'></a></td>[% END %]
@@ -167,12 +167,12 @@
                 <table border="0" cellspacing="0" cellpadding="0">
                   <tr>
                     [% IF s.acknowledged                 %]<td align="center"><a href="extinfo.cgi?type=2&amp;host=[% s.host_name %]&amp;service=[% s.description %]#comments"><img src="/thruk/themes/[% theme %]/images/ack.gif" alt="This service problem has been acknowledged" title="This service problem has been acknowledged" border="0" height="20" width="20"></a></td>[% END %]
-                    [% IF comment_count > 0              %]<td align="center"><img src="/thruk/themes/[% theme %]/images/comment.gif" alt="This service has [% comment_count %] comment associated with it" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name description = s.description %][% FOR com = comments_by_host_service.$hostname.$description %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(com.entry_time, '%Y-%m-%d') == today %][% date.format(com.entry_time, datetime_format_today) %][% ELSE %][% date.format(com.entry_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(com.comment)) %][% ELSE %][% html_escape(com.comment) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% hostname %] - [% description %] Comments',WIDTH,600,CLOSECLICK,HAUTO);"></td>[% END %]
+                    [% IF comment_count > 0              %]<td align="center"><img src="/thruk/themes/[% theme %]/images/comment.gif" alt="This service has [% comment_count %] comment associated with it" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name description = s.description %][% FOR com = comments_by_host_service.$hostname.$description %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(com.entry_time, '%Y-%m-%d') == today %][% date.format(com.entry_time, datetime_format_today) %][% ELSE %][% date.format(com.entry_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(com.comment)) %][% ELSE %][% escape_quotes(html_escape(com.comment)) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% hostname %] - [% description %] Comments',WIDTH,600,CLOSECLICK,HAUTO);"></td>[% END %]
                     [% IF s.notifications_enabled == 0   %]<td align="center"><a href="extinfo.cgi?type=2&amp;host=[% s.host_name %]&amp;service=[% s.description %]"><img src="/thruk/themes/[% theme %]/images/ndisabled.gif" alt="Notifications for this service have been disabled" title="Notifications for this service have been disabled" border="0" height="20" width="20"></a></td>[% END %]
                     [% IF s.active_checks_enabled == 0 && s.accept_passive_checks == 0 %]<td align="center"><a href="extinfo.cgi?type=2&amp;host=[% s.host_name %]&amp;service=[% s.description %]"><img src="/thruk/themes/[% theme %]/images/disabled.gif" alt="Checks of this service have been disabled" title="Checks of this service have been disabled" border="0" height="20" width="20"></a></td>
                     [% ELSIF s.active_checks_enabled == 0   %]<td align="center" valign="middle"><a href='extinfo.cgi?type=2&amp;host=[% s.host_name %]&amp;service=[% s.description %]'><img src='/thruk/themes/[% theme %]/images/passiveonly.gif' border="0" width="20" height="20" alt='Active checks of the service have been disabled - only passive checks are being accepted' title='Active checks of the service have been disabled - only passive checks are being accepted'></a></td>[% END %]
                     [% IF s.is_flapping                  %]<td align="center"><a href='extinfo.cgi?type=2&amp;host=[% s.host_name %]&amp;service=[% s.description %]'><img src='/thruk/themes/[% theme %]/images/flapping.gif' border="0" width="20" height="20" alt='This service is flapping between states' title='This service is flapping between states'></a></td>[% END %]
-                    [% IF s.scheduled_downtime_depth > 0 %]<td class="has_downtime" align="center"><img src="/thruk/themes/[% theme %]/images/downtime.gif" alt="This service is currently in a period of scheduled downtime" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name description = s.description %][% FOR d = downtimes_by_host_service.$hostname.$description %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.start_time, '%Y-%m-%d') == today %][% date.format(d.start_time, datetime_format_today) %][% ELSE %][% date.format(d.start_time, datetime_format) %][% END %] until </td><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.end_time, '%Y-%m-%d') == today %][% date.format(d.end_time, datetime_format_today) %][% ELSE %][% date.format(d.end_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(d.comment)) %][% ELSE %][% html_escape(d.comment) %][% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% hostname %] - [% description %] Downtimes', WIDTH,500,CLOSECLICK,HAUTO);"></td>[% END %]
+                    [% IF s.scheduled_downtime_depth > 0 %]<td class="has_downtime" align="center"><img src="/thruk/themes/[% theme %]/images/downtime.gif" alt="This service is currently in a period of scheduled downtime" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = s.host_name description = s.description %][% FOR d = downtimes_by_host_service.$hostname.$description %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.start_time, '%Y-%m-%d') == today %][% date.format(d.start_time, datetime_format_today) %][% ELSE %][% date.format(d.start_time, datetime_format) %][% END %] until </td><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.end_time, '%Y-%m-%d') == today %][% date.format(d.end_time, datetime_format_today) %][% ELSE %][% date.format(d.end_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(d.comment)) %][% ELSE %][% escape_quotes(html_escape(d.comment)) %][% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% hostname %] - [% description %] Downtimes', WIDTH,500,CLOSECLICK,HAUTO);"></td>[% END %]
                     [% IF s.is_executing > 0             %]<td align="center"><a href="extinfo.cgi?type=2&amp;host=[% s.host_name %]&amp;service=[% s.description %]"><img src="/thruk/themes/[% theme %]/images/waiting.gif" alt="This service is currently executing its servicecheck" title="This service is currently executing its servicecheck" border="0" height="20" width="20"></a></td>[% END %]
                     [% IF s.notes_url_expanded           %]<td align="center" valign="middle"><a href='[% s.notes_url_expanded %]'[% IF c.config.cgi_cfg.notes_url_target %] target='[% c.config.cgi_cfg.notes_url_target %]'[% END %]><img src='/thruk/themes/[% theme %]/images/notes.gif' border="0" width="20" height="20" alt='View Extra Service Notes' title='View Extra Service Notes'></a></td>[% END %]
                     [% IF s.action_url_expanded          %]<td align="center" valign="middle"><a href='[% s.action_url_expanded %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='/thruk/themes/[% theme %]/images/action.gif' border="0" width="20" height="20" alt='Perform Extra Service Actions' title='Perform Extra Service Actions'></a></td>[% END %]
