@@ -119,11 +119,11 @@
                   <table border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       [% IF h.acknowledged                 %]<td align="center" valign="middle"><a href="extinfo.cgi?type=1&amp;host=[% h.name %]&amp;backend=[% h.peer_key %]#comments"><img src="/thruk/themes/[% theme %]/images/ack.gif" alt="This host problem has been acknowledged" title="This host problem has been acknowledged" border="0" height="20" width="20"></a></td>[% END %]
-                      [% IF comment_count > 0              %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/comment.gif" alt="This host has [% comment_count %] comment associated with it" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = h.name %][% FOR com = comments_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(com.entry_time, '%Y-%m-%d') == today %][% date.format(com.entry_time, datetime_format_today) %][% ELSE %][% date.format(com.entry_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(com.comment)) %][% ELSE %][% html_escape(com.comment) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Comments',WIDTH,600,CLOSECLICK,HAUTO);"></td>[% END %]
+                      [% IF comment_count > 0              %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/comment.gif" alt="This host has [% comment_count %] comment associated with it" border="0" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = h.name %][% FOR com = comments_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(com.entry_time, '%Y-%m-%d') == today %][% date.format(com.entry_time, datetime_format_today) %][% ELSE %][% date.format(com.entry_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% com.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(com.comment)) %][% ELSE %][% escape_quotes(html_escape(com.comment)) %][% END %]</td><td nowrap valign=\'top\'>[% IF com.entry_type == 1 %]User[% ELSIF com.entry_type == 2 %]Scheduled Downtime[% ELSIF com.entry_type == 3 %]Flap Detection[% ELSIF com.entry_type == 4 %]Acknowledgement[% ELSE %]?[% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Comments',WIDTH,600,CLOSECLICK,HAUTO);"></td>[% END %]
                       [% IF h.notifications_enabled == 0   %]<td align="center" valign="middle"><a href="extinfo.cgi?type=1&amp;host=[% h.name %]&amp;backend=[% h.peer_key %]"><img src="/thruk/themes/[% theme %]/images/ndisabled.gif" alt="Notifications for this host have been disabled" title="Notifications for this host have been disabled" border="0" height="20" width="20"></a></td>[% END %]
                       [% IF h.active_checks_enabled == 0   %]<td align="center" valign="middle"><a href="extinfo.cgi?type=1&amp;host=[% h.name %]&amp;backend=[% h.peer_key %]"><img src="/thruk/themes/[% theme %]/images/disabled.gif" alt="Checks of this host have been disabled" title="Checks of this host have been disabled" border="0" height="20" width="20"></a></td>[% END %]
                       [% IF h.is_flapping                  %]<td align="center" valign="middle"><a href='extinfo.cgi?type=1&amp;host=[% h.name %]&amp;backend=[% h.peer_key %]'><img src='/thruk/themes/[% theme %]/images/flapping.gif' border="0" width="20" height="20" alt='This host is flapping between states' title='This host is flapping between states'></a></td>[% END %]
-                      [% IF h.scheduled_downtime_depth > 0 %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/downtime.gif" alt="This host is currently in a period of scheduled downtime" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = h.name %][% FOR d = downtimes_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.start_time, '%Y-%m-%d') == today %][% date.format(d.start_time, datetime_format_today) %][% ELSE %][% date.format(d.start_time, datetime_format) %][% END %] until </td><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.end_time, '%Y-%m-%d') == today %][% date.format(d.end_time, datetime_format_today) %][% ELSE %][% date.format(d.end_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(d.comment)) %][% ELSE %][% html_escape(d.comment) %][% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Downtimes',CLOSECLICK,HAUTO);"></td>[% END %]
+                      [% IF h.scheduled_downtime_depth > 0 %]<td align="center" valign="middle"><img src="/thruk/themes/[% theme %]/images/downtime.gif" alt="This host is currently in a period of scheduled downtime" height="20" width="20" [% info_popup_event_type %]="return overlib('<table border=0 cellpadding=3 cellspacing=0>[% SET hostname = h.name %][% FOR d = downtimes_by_host.$hostname %]<tr><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.start_time, '%Y-%m-%d') == today %][% date.format(d.start_time, datetime_format_today) %][% ELSE %][% date.format(d.start_time, datetime_format) %][% END %] until </td><td nowrap valign=\'top\' align=\'right\'>[% IF date.format(d.end_time, '%Y-%m-%d') == today %][% date.format(d.end_time, datetime_format_today) %][% ELSE %][% date.format(d.end_time, datetime_format) %][% END %]</td><td nowrap valign=\'top\'>[% d.author %]</td><td>[% IF escape_html_tags %][% html_escape(html_escape(d.comment)) %][% ELSE %][% escape_quotes(html_escape(d.comment)) %][% END %]</td></tr>[% END %]</table>',STICKY, CAPTION,'[% h.name %] Downtimes',CLOSECLICK,HAUTO);"></td>[% END %]
                       [% IF h.is_executing > 0             %]<td align="center" valign="middle"><a href="extinfo.cgi?type=1&amp;host=[% h.name %]&amp;backend=[% h.peer_key %]"><img src="/thruk/themes/[% theme %]/images/waiting.gif" alt="This host is currently executing its hostcheck" title="This host is currently executing its hostcheck" border="0" height="20" width="20"></a></td>[% END %]
                       [% IF h.notes_url_expanded           %]<td align="center" valign="middle"><a href='[% h.notes_url_expanded %]'[% IF c.config.cgi_cfg.notes_url_target %] target='[% c.config.cgi_cfg.notes_url_target %]'[% END %]><img src='/thruk/themes/[% theme %]/images/notes.gif' border="0" width="20" height="20" alt='View Extra Host Notes' title='View Extra Host Notes'></a></td>[% END %]
                       [% IF h.action_url                   %]<td align="center" valign="middle"><a href='[% h.action_url %]'[% IF c.config.cgi_cfg.action_url_target %] target='[% c.config.cgi_cfg.action_url_target %]'[% END %]><img src='/thruk/themes/[% theme %]/images/action.gif' border="0" width="20" height="20" alt='Perform Extra Host Actions' title='Perform Extra Host Actions'></a></td>[% END %]
